fixes banner clipping, trades lorem for content, adds link to cvs page back to home.

--- a/styles/maintest.css
+++ b/styles/maintest.css
@@ -98,7 +98,7 @@ img {
   position: absolute;
   font-weight: bold;
   top: 0;
-  right: 0.5em;
+  right: 1em;
   background: rgba(85, 84, 84, 0.5);
   padding: 0.5em 0.5em 0.75em;
   clip-path: circle(92.2% at 50% 0);
